--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\icharala\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=/Users/icharala/Library/Application Support/NetBeans/8.0/build.properties
