--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,18 +31,20 @@ endorsed.classpath=
 excludes=
 file.reference.jsoup-1.7.3.jar=jar\\jsoup-1.7.3.jar
 file.reference.jsyntaxpane-0.9.5-b29.jar=jar\\jsyntaxpane-0.9.5-b29.jar
+file.reference.snakeyaml-1.13.jar=jar/snakeyaml-1.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jsyntaxpane-0.9.5-b29.jar}:\
-    ${file.reference.jsoup-1.7.3.jar}
+    ${file.reference.jsoup-1.7.3.jar}:\
+    ${file.reference.snakeyaml-1.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
