--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/MCPlotsControl.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jlatexmath-1.0.3.jar=jar\\jlatexmath-1.0.3.jar
 file.reference.jsoup-1.7.3.jar=jar\\jsoup-1.7.3.jar
 file.reference.jsyntaxpane-0.9.5-b29.jar=jar\\jsyntaxpane-0.9.5-b29.jar
 file.reference.snakeyaml-1.13.jar=jar/snakeyaml-1.13.jar
@@ -37,7 +38,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jsyntaxpane-0.9.5-b29.jar}:\
     ${file.reference.jsoup-1.7.3.jar}:\
-    ${file.reference.snakeyaml-1.13.jar}
+    ${file.reference.snakeyaml-1.13.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jlatexmath-1.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
